--- a/client/main.css
+++ b/client/main.css
@@ -1,91 +1,93 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 html {
-  height: 100%;
-  overflow-y: hidden;
-  background-color: #eee;
+	height: 100%;
+	overflow-y: hidden;
+	background-color: #eee;
 }
 body {
-  font-family: 'Poppins', sans-serif;
-  height: 100%;
-  margin: 0px;
-  user-select: none;
+	font-family: 'Poppins', sans-serif;
+	height: 100%;
+	margin: 0px;
+	user-select: none;
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'),
-  url('../fonts/poppins-v20-latin-regular.ttf') format('truetype');
+	font-display: swap;
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 400;
+	src:
+		url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'),
+		url('../fonts/poppins-v20-latin-regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-display: swap;
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/poppins-v20-latin-600.woff2') format('woff2'),
-  url('../fonts/poppins-v20-latin-600.ttf') format('truetype');
+	font-display: swap;
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 600;
+	src:
+		url('../fonts/poppins-v20-latin-600.woff2') format('woff2'),
+		url('../fonts/poppins-v20-latin-600.ttf') format('truetype');
 }
 
 .MuiModal-root .MuiBox-root {
-  max-height: 100vh;
+	max-height: 100vh;
 }
 
 /* Works on Firefox */
 * {
-  scrollbar-width: thin;
-  scrollbar-color: #3e6b01 #ccc;
-  box-sizing: border-box;
+	scrollbar-width: thin;
+	scrollbar-color: #afafaf #fff;
+	box-sizing: border-box;
 }
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 12px;
+	width: 12px;
 }
 
 *::-webkit-scrollbar-track {
-  background: #ccc;
+	background: #ccc;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #3e6b01;
-  border-radius: 20px;
-  border: 3px solid #ccc;
+	background-color: #afafaf;
+	border-radius: 20px;
+	border: 3px solid #ccc;
 }
 
 /*
 Loading
 */
 .line {
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  background-color: #5a9902;
+	display: inline-block;
+	width: 15px;
+	height: 15px;
+	border-radius: 15px;
+	background-color: #000;
 }
 
 .loading .line:nth-last-child(1) {
-  animation: loadingC 0.6s 0.1s linear infinite;
+	animation: loadingC 0.6s 0.1s linear infinite;
 }
 .loading .line:nth-last-child(2) {
-  animation: loadingC 0.6s 0.2s linear infinite;
+	animation: loadingC 0.6s 0.2s linear infinite;
 }
 .loading .line:nth-last-child(3) {
-  animation: loadingC 0.6s 0.3s linear infinite;
+	animation: loadingC 0.6s 0.3s linear infinite;
 }
 
 @keyframes loadingC {
-  0% {
-    transform: translate(0, 0);
-  }
-  50% {
-    transform: translate(0, 15px);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
+	0% {
+		transform: translate(0, 0);
+	}
+	50% {
+		transform: translate(0, 15px);
+	}
+	100% {
+		transform: translate(0, 0);
+	}
 }
